--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nandini9913.github.io/to-do-app",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
+    "react-alert": "^7.0.0",
+    "react-alert-template-basic": "^1.0.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
